# noticiencias_news_collector

./: .bandit  .coverage-baseline  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .placeholder-audit.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUDIT_PROMPTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  config.toml  labels.md  main.py  missing.md  news_collector_structure.py  pr_plan.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_collector.py  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit-inventory-weekly.yml  audit-security.yml  ci.yml  dependency-lock-check.yml  docs.yml  fix-makefile-tabs.yml  manual-lock-sync.yml  mutation.yml  placeholder-audit-nightly.yml  placeholder-audit-pr.yml  release.yml  security.yml  sync-master.yml
audit/: 00_inventory.json  00_inventory.md  01_docs_code_diff.md  01_docs_fixes.patch  02_readme_checklist.md  02_readme_fix.patch  03_config_matrix.md  04_cli_behaviors.md  05_gui_findings.md  06_test_quality.md  07_asvs_checklist.md  07_security_report.md  08_supply_chain.md  09_perf_findings.md  10_ops.md  11_ci_cdpipeline.md  12_dx_checklist.md  13_release_notes.md
audits/: baseline_bandit.json  baseline_pip_audit.json  baseline_safety.json  post_bandit.json  post_pip_audit.json  post_safety.json
config/: __init__.py  observability.py  perf_thresholds.py  secret_manager.py  settings.py  sources.py  version.py
core/: config_manager.py  config_schema.py
docs/: CHANGELOG.md  api_examples.md  ci.md  collector_runbook.md  common_output_format.md  config_fields.md  database_deployment.md  faq.md  fixtures.md  operations.md  performance_baselines.md  placeholder_policy.md  release-checklist.md  release_notes.md  runbook.md  security.md  tools_audit_issues.md
docs/api/: search.js  src.html
docs/policies/: source_policy_matrix.md
docs/runbooks/: healthcheck.md
noticiencias/: __init__.py  config_manager.py  config_schema.py  gui_config.py
observability/: manifest.md
observability/alerts/: pipeline_alerts.yaml
observability/dashboards/: pipeline_overview.json
perf/: bench.md
perf/fixtures/: rss_mixed_latency.jsonl  rss_peak_hour.jsonl
reports/: placeholders.baseline.json
reports/ops/: monitoring_outage_report.json
reports/perf/: enrichment_latency.json  pipeline_perf_metrics.json  postgres_write_profile.json
sbom/: cyclonedx.json
scripts/: benchmark_canonicalize.py  bump_version.py  canonicalization_dupe_demo.py  coverage_ratcheter.sh  dedupe_tuning.py  enrichment_sanity.py  evaluate_ranking.py  generate_api_docs.py  generate_inventory.py  healthcheck.py  load_test.py  profile_pipeline.py  recluster_articles.py  replay_outage.py  reranker_distribution.py  run_secret_scan.py  score_delta.py  security_gate.py  sync_lockfiles.py  synthetic_alert_test.py  update_changelog.py  weekly_quality_report.py
scripts/migrations/: 20250930_optimize_indexes.py  20251005_dedupe_recency_indexes.py
src/: __init__.py
src/collectors/: __init__.py  async_rss_collector.py  base_collector.py  rate_limit_utils.py  rss_collector.py
src/contracts/: __init__.py  collector.py  common.py  enrichment.py  scoring.py
src/enrichment/: __init__.py  nlp_stack.py  pipeline.py
src/monitoring/: __init__.py  canary.py  common.py  detectors.py  io.py  reporting.py
src/perf/: __init__.py  load_replay.py
src/reranker/: __init__.py  reranker.py
src/scoring/: __init__.py  basic_scorer.py  feature_scorer.py
src/serving/: __init__.py  api.py
src/storage/: __init__.py  database.py  models.py
src/utils/: __init__.py  datetime_utils.py  dedupe.py  logger.py  metrics.py  observability.py  pydantic_compat.py  text_cleaner.py  url_canonicalizer.py
tests/: collector_pipeline_types.py  test_async_collector_parity.py  test_cli_config.py  test_collector_logging.py  test_collector_pipeline_e2e.py  test_config_manager.py  test_contracts_validation.py  test_database_migrations.py  test_database_pending_articles.py  test_database_simhash_behavior.py  test_datetime_utils.py  test_dedupe_utils.py  test_enrichment_pipeline.py  test_feature_scorer_config.py  test_fix_makefile_tabs.py  test_gui_config.py  test_healthcheck.py  test_main_initialization.py  test_monitoring_anomalies.py  test_observability.py  test_python_version_requirement.py  test_rate_limit_and_backoff.py  test_reranker.py  test_run_secret_scan.py  test_scan_placeholders.py  test_scoring_golden.py  test_security_gate.py  test_serving_api.py  test_text_cleaner.py  test_url_canonicalizer.py
tests/collectors/: test_http_cache_behavior.py
tests/data/: collector_pipeline_chain.json  dev_ranking.json  golden_articles.json  scoring_golden.json
tests/data/monitoring/: outage_replay.json
tests/data/perf/: rss_load_sample.jsonl
tests/e2e/: test_config_precedence.py  test_runner_cli.py
tests/gui/: test_gui_config_persistence.py
tests/mutation_smoke/: test_mutation_smoke.py
tests/perf/: test_async_collector_perf.py  test_enrichment_latency.py  test_pipeline_perf.py  test_postgres_write_profile.py
tests/placeholder_audit/: test_placeholder_audit.py
tests/placeholder_audit/fixtures/: doc_page.md  expired_module.py  prod_module.py  tests_module.py
tests/property/: test_normalization_properties.py
tests/tools/: test_check_makefile_tabs.py
tools/: audit_to_issues.sh  check_makefile_tabs.py  config_editor.py  fix_makefile_tabs.py  placeholder_audit.py  placeholder_patterns.yml  scan_placeholders.py
tools/perf/: profile_collectors.py
