[project]
name = "noticiencias-news-collector"
dynamic = ["version"]
description = "Scientific news aggregation pipeline for the Noticiencias project"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Noticiencias Team" }]

[project.optional-dependencies]
security = [
    "bandit>=1.7.9",
    "pip-audit>=2.9.0",
    "trufflehog3>=3.0.10",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "config.version.__version__"}

[tool.ruff]
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
]
ignore = [
    "E402",
    "E501",
    "E712",
    "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
ignore_missing_imports = true
warn_unused_configs = true
show_error_codes = true
follow_imports = "skip"
plugins = []
disable_error_code = [
    "attr-defined",
    "assignment",
    "index",
    "import-untyped",
    "var-annotated",
]

[[tool.mypy.overrides]]
module = [
    "main",
    "src.*",
    "tests.*",
]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra"
markers = [
    "e2e: end-to-end scenarios that exercise the pipeline",
    "perf: performance-focused regression tests",
    "security: security and compliance checks",
]

[tool.mutmut]
paths_to_mutate = ["src"]
tests_dir = "tests"
runner = "python -m pytest tests/mutation_smoke"
backup = false
